--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -1,6 +1,6 @@
 .nav{
     position: relative;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     .menu{
         width: 520px;
