--- a/src/components/Skills/skills.scss
+++ b/src/components/Skills/skills.scss
@@ -1,7 +1,7 @@
 .container{
-    height: 70vh;
+    height: 70%;
     width: 50vw;
-    margin: 10vh 25vw ;
+    margin: 10% 25vw ;
     transform: perspective(1200px) rotateY(10deg);
     padding: 2rem;
     background: rgb(41, 120, 169, .3);
@@ -38,12 +38,12 @@
 
 .frontend{
     grid-area: front;
-    height: 25vh;
+    height: 25%;
 
 }
 .backend{
     grid-area: back;
-    height: 25vh;
+    height: 25%;
 
 }
 .others{
